--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 title: Docker 101
+updated: 7.4.2022
 description: Tutorial to learn the Docker basics
 show_downloads: False
 navigation:
