--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,16 @@ navigation:
   - title: Overview
     url: /
   - title: 1. Deploy ToDo stand-alone
-    url: docs/lab1
+    url: workshop/lab1
   - title: 2. Update the app, build a new image
-    url: docs/lab2
+    url: workshop/lab2
   - title: 3. Persisiting the data, Volumes
-    url: docs/lab3
+    url: workshop/lab3
   - title: 4. Add MySQL DB, Multi-Container apps
-    url: docs/lab4
+    url: workshop/lab4
   - title: 5. Image Building Best Practises
-    url: docs/lab5
+    url: workshop/lab5
   - title: 6. Tips and useful commands
-    url: docs/lab6    
+    url: workshop/lab6    
 
 
